--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-offset-1 col-xs-10">
+      <h1>Choose Your Adventure</h1>
+
+      <!-- <router-outlet></router-outlet> -->
+    </div>
+  </div>
+</div>
