--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: monospace;
+  font-family: 'Merriweater', serif;
   font-weight: bold;
   font-size: 60px;
   text-align: center;
